test/tasty/pos/src-3/tastytest/DefaultParamFlags.scala
package tastytest

class DefaultParamFlags {
  def method(a: Int, b: Int = 1): Int = a + b
}
